--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     <nav>
         <a href="#">home</a>
         <a href="#">noticias</a>
-        <a href="#">Curiosidades</a>
-        <a href="#">fale conosco</a>
+        <a href="#">contato</a>
     </nav>
     <main>
         <article>
